--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-
+      <H1>LOGO</H1>
     </body>
 </html>
