--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,22 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div class="contenedor quienes">
+            <h1>Quiénes somos</h1>
+            <h3>Texto descriptivo de quiénes somos</h3>
 
+            <div class="Xime"></div>
+            <h4>Descripción xime</h4>
+
+            <div class="Maite"></div>
+            <h4>Descripción Maite</h4>
+
+            <div class="Aldi"></div>
+            <h4>Descripción Aldi</h4>
+
+            <div class="Ivonne"></div>
+            <h4>Descripción Ivonne</h4>
+            
+        </div>
     </body>
 </html>
