--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,15 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-      <H1>LOGO</H1>
+        <div class="container">
+            <img src="BLINK.png">
+                <ul class="menu">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="#">Clientes</a></li>
+                  <li><a href="#">Contactos</a></li>
+        </ul>
+    </div>
+    
     </body>
 </html>
