--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-      <div class="contenedor quienes">
+        <div class= "contenedor">
+            <img src= "banner_home.jpg">
+        </div>
+        <div class="contenedor quienes">
             <h1>Quiénes somos</h1>
             <h3>Texto descriptivo de quiénes somos</h3>
 
