Cambios CSS Banner

--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class= "contenedor">
+        <div class= "contenedor banner">
             <img src= "banner_home.jpg">
         </div>
         <div class="contenedor quienes">
