Revert "Agregue logo y menu"
This reverts commit 21f08585c5575d94d2444d8a304e1c4e888b41c8.

--- a/Index.html
+++ b/Index.html
@@ -5,15 +5,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div class="container">
-            <img src="BLINK.png">
-                <ul class="menu">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Clientes</a></li>
-                  <li><a href="#">Contactos</a></li>
-        </ul>
-    </div>
-    
+      <H1>LOGO</H1>
     </body>
 </html>
