--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,16 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+            <div class="container">
+                    <img src="BLINK.png">
+                        <ul class="menu">
+                          <li><a href="#">Home</a></li>
+                          <li><a href="#">Portfolio</a></li>
+                          <li><a href="#">Clientes</a></li>
+                          <li><a href="#">Contactos</a></li>
+                </ul>
+            </div>
+            
         <div class= "contenedor banner">
             <img src= "banner_home.jpg">
         </div>
