--- a/Index.html
+++ b/Index.html
@@ -32,5 +32,19 @@
             <div class= "contenedor servicios">
                 <h3>Texto descriptivo de Servicios</h3>
             </div>
+            <div class= "contenedor servicios detalle">
+                <div class="diseño">
+                    <h4>Diseño Web</h4>
+                </div>
+                    <div class="usabilidad">
+                    <h4>Análisis de Usabilidad</h4>
+                </div>
+                    <div class="maquetado">
+                    <h4>Maquetado</h4>
+                </div>
+                    <div class="administradores">
+                    <h4>Administradores</h4>
+                </div>
+            </div>
     </body>
 </html>
