--- a/Index.html
+++ b/Index.html
@@ -3,16 +3,17 @@
         <meta charset="utf-8">
         <title>BLINK</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     </head>
     <body>
-            <div class="container">
-                    <img src="BLINK.png">
-                        <ul class="menu">
-                          <li><a href="#">Home</a></li>
-                          <li><a href="#">Portfolio</a></li>
-                          <li><a href="#">Clientes</a></li>
-                          <li><a href="#">Contactos</a></li>
-                </ul>
+            <div class="container encabezado">
+                    <div class= "logo"><img src= "BLINK.png"></div>
+                    <div class= "menu">
+                          <a href="#">Home</a>
+                          <a href="#">Portfolio</a>
+                          <a href="#">Clientes</a>
+                          <a href="#">Contactos</a>
+                    </div>
             </div>
             
         <div class= "contenedor banner">
@@ -44,6 +45,7 @@
             </div>
             <div class= "contenedor servicios detalle">
                 <div class="diseño">
+                    <i class="fas fa-laptop"></i>
                     <h4>Diseño Web</h4>
                 </div>
                     <div class="usabilidad">
