Cambios en html y css de Servicios

--- a/Index.html
+++ b/Index.html
@@ -37,26 +37,32 @@
             <h4>Descripción Ivonne</h4>
         </div>
     </div>
-            <div class= "contenedor servicios">
+    <div class= "contenedor servicios">
+        <div class="descripcionserv">
                 <h1>Servicios</h1>
-            </div>
-            <div class= "contenedor servicios">
-                <h3>Texto descriptivo de Servicios</h3>
-            </div>
-            <div class= "contenedor servicios detalle">
-                <div class="diseño">
-                    <i class="fas fa-laptop"></i>
-                    <h4>Diseño Web</h4>
-                </div>
-                    <div class="usabilidad">
-                    <h4>Análisis de Usabilidad</h4>
-                </div>
-                    <div class="maquetado">
-                    <h4>Maquetado</h4>
-                </div>
-                    <div class="administradores">
-                    <h4>Administradores</h4>
-                </div>
-            </div>
+                <p>Nos especializamos en el area del diseño web y el marketing digital, contando con servicios de calidad y al mejor precio.
+                Tenemos todo lo necesario para que su negocio crezca en internet.            
+                Nuestro placer es crecer junto a nuestros clientes, cultivando y afianzando la relación.</p>
+        </div>
+           
+    </div>
+    <div class= "contenedor servicios detalle">
+        <div>
+            <ul>
+                <li><span class="fas fa-pen-fancy"></span>Diseño Web</li>
+                <li><span class="fas fa-laptop"></span>Análisis de Usabilidad</li>
+                <li><span class="fas fa-bullhorn"></span>SEO</li>
+                <li><span class="fas fa-envelope-open-text"></span>Email Marketing</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li><span class="fas fa-file-code"></span>Maquetado</li>
+                <li><span class="fas fa-quote-left"></span>Contenidos</li>
+                <li><span class="fas fa-poll"></span>Informes</li>
+                <li><span class="fas fa-mobile"></span>Aplicaciones Mobiles</li>
+            </ul>
+        </div>
+    </div>                    
     </body>
 </html>
