--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     </head>
     <body>
-            <div class="container encabezado">
-                    <div class= "logo"><img src= "BLINK.png"></div>
+            <div class="contenedor encabezado">
+                    <div class= "contenedor logo"><img src= "BLINK.png"></div>
                     <div class= "menu">
                           <a href="#">Home</a>
                           <a href="#">Portfolio</a>
