--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
         <title>BLINK</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     </head>
     <body>
             <div class="contenedor encabezado">
@@ -23,7 +24,7 @@
             <h1>Quiénes somos</h1>
             <h3>Texto descriptivo de quiénes somos</h3>
         </div>
-        <div class= "contenedor cajas">
+        <div class= "contenedor quienes cajas">
             <div class="Xime">
             <h4>Descripción xime</h4>
         </div>
@@ -38,11 +39,11 @@
         </div>
     </div>
     <div class= "contenedor servicios">
-        <div class="descripcionserv">
+        <div class="descripcion">
                 <h1>Servicios</h1>
                 <p>Nos especializamos en el area del diseño web y el marketing digital, contando con servicios de calidad y al mejor precio.
-                Tenemos todo lo necesario para que su negocio crezca en internet.            
-                Nuestro placer es crecer junto a nuestros clientes, cultivando y afianzando la relación.</p>
+                        <br>Tenemos todo lo necesario para que su negocio crezca en internet.            
+                        <br>Nuestro placer es crecer junto a nuestros clientes, cultivando y afianzando la relación.</p>
         </div>
            
     </div>
@@ -63,6 +64,20 @@
                 <li><span class="fas fa-mobile"></span>Aplicaciones Mobiles</li>
             </ul>
         </div>
-    </div>                    
+    </div>   
+    <div class= "contenedor varios"> 
+        <div class= "contenedor clientes">
+                <div class="descripcion">
+                <h1>Clientes</h1>
+                <p>Conocé a quienes confiaron en nosotros.</p>
+                </div>
+        </div>  
+        <div class= "contenedor portfolio">
+                <div class="descripcion">
+                <h1>Portfolio</h1>
+                <p>Conocé nuestros trabajos.</p>
+                </div>
+        </div>  
+    </div>               
     </body>
 </html>
