--- a/Index.html
+++ b/Index.html
@@ -23,16 +23,18 @@
             <h3>Texto descriptivo de quiénes somos</h3>
         </div>
         <div class= "contenedor cajas">
-            <div class="Xime">
+            <div class="jefa Xime">
             <h4>Descripción xime</h4>
         </div>
-            <div class="Maite">
+            <div class="jefa Maite">
             <h4>Descripción Maite</h4>
         </div>
-            <div class="Aldi">
+            <div class="jefa Aldi">
             <h4>Descripción Aldi</h4>
         </div>
-            <div class="Ivonne">
+            <div class="jefa Ivonne">
+            <div>
+            <img src="ivonne.jpg">
             <h4>Descripción Ivonne</h4>
         </div>
     </div>
