--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,7 @@
             <div class="jefa Ivonne">
             <div>
             <img src="ivonne.jpg">
+            </div>
             <h4>Descripción Ivonne</h4>
         </div>
     </div>
