--- a/Index.html
+++ b/Index.html
@@ -38,22 +38,27 @@
             
         <div class= "contenedor banner">
             <img src= "banner_home.jpg">
-        </div>
+     </div>
         <div class="contenedor quienes">
             <h1>Quiénes somos</h1>
             <h3>Texto descriptivo de quiénes somos</h3>
         </div>
+        <div class= "contenedor cajas">
+            <div class="jefa Xime">
         <div class= "contenedor quienes cajas">
             <div class="Xime">
             <h4>Descripción xime</h4>
         </div>
-            <div class="Maite">
+            <div class="jefa Maite">
             <h4>Descripción Maite</h4>
         </div>
-            <div class="Aldi">
+            <div class="jefa Aldi">
             <h4>Descripción Aldi</h4>
         </div>
-            <div class="Ivonne">
+            <div class="jefa Ivonne">
+            <div>
+            <img src="ivonne.jpg">
+            </div>
             <h4>Descripción Ivonne</h4>
         </div>
     </div>
