--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,8 @@
         </div>
         <div class="contenedor quienes">
             <h1>Quiénes somos</h1>
-            <h3>Texto descriptivo de quiénes somos</h3>
+            <p>Somos un equipo de cuatro mujeres apasionadas por la tecnología, la programación y creatividad. Juntas pensamos y desarrollamos las mejores ideas para acercar marcas y productos al mundo digital.
+            <br>Es nuestro objetivo brindar a nuestros clientes soluciones que garanticen y consoliden su crecimiento.</p>
         </div>
         <div class= "contenedor cajas">
             <div class="jefa Xime">
