--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
             <div class="contenedor encabezado">
-                    <div class= "contenedor logo"><img src= "BLINK.png"></div>
-                    <div class= "menu">
+                    <div class= "contenedor logo ancho1"><img src= "BLINK.png"></div>
+                    <div class= "menu ancho2">
                           <a href="#">Home</a>
                           <a href="#">Portfolio</a>
                           <a href="#">Clientes</a>
