acomode el menu

--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,12 @@
             <div class="contenedor encabezado">
                     <div class= "contenedor logo ancho1"><img src= "BLINK.png"></div>
                     <div class= "menu ancho2">
-                          <a href="#">Home</a>
-                          <a href="#">Portfolio</a>
-                          <a href="#">Clientes</a>
-                          <a href="#">Contactos</a>
+                          <ul>
+                              <li><a href="#">Home</a></li>
+                              <li><a href="#">Portfolio</a></li>
+                              <li><a href="#">Clientes</a></li>
+                              <li><a href="#">Contacto</a></li>                            
+                          </ul>
                     </div>
             </div>
             
