--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,8 @@
         </div>
         <div class="contenedor quienes">
             <h1>Quiénes somos</h1>
-            <p>Somos un equipo de cuatro mujeres apasionadas por la tecnología, la programación y creatividad. Juntas pensamos y desarrollamos las mejores ideas para acercar marcas y productos al mundo digital.
+            <p>Somos un equipo de cuatro mujeres apasionadas por la tecnología, la programación y creatividad. 
+            <br>Juntas pensamos y desarrollamos las mejores ideas para acercar marcas y productos al mundo digital.
             <br>Es nuestro objetivo brindar a nuestros clientes soluciones que garanticen y consoliden su crecimiento.</p>
         </div>
         <div class= "contenedor cajas">
@@ -40,11 +41,14 @@
         </div>
             <div class="jefa Ivonne">
             <div>
-            <img src="ivonne.jpg">
+                <img src="ivonne.jpg">
             </div>
-            <h4>Descripción Ivonne</h4>
+            <h4>Ivonne</h4>
+            <p>No sabe usar github desktop
+            <br>pero le pone onda toqueteando botones
+            <br>y eventualmente le sale
+            </p>
         </div>
-    </div>
     <div class= "contenedor servicios">
         <div class="descripcion">
                 <h1>Servicios</h1>
